2009-07-23  Yavor Doganov  <yavor@gnu.org>

	* nsfont.m (NSFontDescriptor.h): Explicitly include under GNUstep.

2009-07-23  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (EmacsView-keyUp:): Only act when running under Tiger.
	Bugs 3792, 3720, 2402.
	(ns_lookup_indexed_color): Check for bad index.
	(ns_index_color): Init unused slot to 0.
	(ns_dumpglyphs_box_or_relief): Replace useless xassert with an if().
	Bug 3714, possibly 3082.

2009-07-22  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (w32_wnd_proc) [WM_IME_STARTCOMPOSITION]: Position
	IME window at cursor (Bug#2570).
	(w32_wnd_proc) [WM_IME_CHAR]: Release context when finished.
	(globals_of_w32fns): Dynamically load functions required above.

	* w32term.c (w32_draw_window_cursor): Send message to reposition
	any IME window.

2009-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c: Revert 2009-07-16 changes.
	(Vauto_save_include_big_deletions): New variable.
	(Fdo_auto_save): Disable auto-save only if
	auto-save-include-big-deletions is nil.

2009-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (move_it_to): For continued lines ending in a tab, take
	the overflowed pixels into account (Bug#3879).

2009-07-21  Ken Raeburn  <raeburn@raeburn.org>

	* lread.c (load_depth): New variable.
	(Fload, load_unwind, init_lread): Set it to the load recursion
	depth; set load_in_progress as a simple boolean based on the
	current load_depth.  (Bug#3892)

2009-07-20  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (ns_has_attribute): Remove.
	(ns_findfonts, nsfont_open): Use ns_attribute_fvalue() instead.

2009-07-18  Juri Linkov  <juri@jurta.org>

	* process.c (Fset_process_query_on_exit_flag): Mention killing
	a buffer in docstring.

2009-07-17  Kenichi Handa  <handa@m17n.org>

	* casetab.c (shuffle): Fix the logic of setting up the cycle.

2009-07-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* nsfns.m (Fns_set_alpha): Remove function.
	(syms_of_nsfns): Don't defsubr it.
