@@ -1,3 +1,7 @@
+2009-07-24  Adrian Robert  <Adrian.B.Robert@gmail.com>
+
+	* nsfont.m (ns_findfonts): Correctly return fallback in match case.
+
 2009-07-23  Yavor Doganov  <yavor@gnu.org>
 
 	* nsfont.m (NSFontDescriptor.h): Explicitly include under GNUstep.
